[gd_scene load_steps=7 format=3 uid="uid://byxtmw3ptkd42"]

[ext_resource type="Script" path="res://Scenes/Main/voxel_creator.gd" id="1_ejpk5"]
[ext_resource type="PackedScene" uid="uid://dsfq2ry7kv1kf" path="res://Scenes/UI/VoxelTypeList/voxel_type_list.tscn" id="2_0tvr6"]
[ext_resource type="Texture2D" uid="uid://cth5gxyhild5k" path="res://Assets/Textures/Plus.png" id="2_15gb2"]
[ext_resource type="PackedScene" uid="uid://cnra7rb36qfu2" path="res://Scenes/UI/TextureUpload/texture_upload.tscn" id="3_agu6b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ebmc0"]
bg_color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scol3"]
bg_color = Color(0.156863, 0.290196, 0.156863, 1)

[node name="VoxelCreator" type="Node2D"]
script = ExtResource("1_ejpk5")

[node name="Container" type="PanelContainer" parent="."]
offset_top = 60.0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ebmc0")

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Container/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Container/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Container/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Container/HBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Voxel Types"
horizontal_alignment = 1
clip_text = true

[node name="PanelContainer" type="PanelContainer" parent="Container/HBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_scol3")

[node name="Add" type="TextureButton" parent="Container/HBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/PanelContainer"]
modulate = Color(0.690196, 1, 0.733333, 1)
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("2_15gb2")
ignore_texture_size = true
stretch_mode = 0

[node name="VoxelTypeList" parent="Container/HBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource("2_0tvr6")]
unique_name_in_owner = true
layout_mode = 2

[node name="VoxelSettings" type="HBoxContainer" parent="Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Textures" type="VBoxContainer" parent="Container/HBoxContainer/VoxelSettings"]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="Container/HBoxContainer/VoxelSettings/Textures"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Name" type="Label" parent="Container/HBoxContainer/VoxelSettings/Textures"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Textures"
horizontal_alignment = 1
clip_text = true

[node name="TextureUpload" parent="Container/HBoxContainer/VoxelSettings/Textures" instance=ExtResource("3_agu6b")]
layout_mode = 2
side = 2

[node name="TextureUpload2" parent="Container/HBoxContainer/VoxelSettings/Textures" instance=ExtResource("3_agu6b")]
layout_mode = 2
side = 4

[node name="TextureUpload3" parent="Container/HBoxContainer/VoxelSettings/Textures" instance=ExtResource("3_agu6b")]
layout_mode = 2
side = 8

[node name="TextureUpload4" parent="Container/HBoxContainer/VoxelSettings/Textures" instance=ExtResource("3_agu6b")]
layout_mode = 2
side = 16

[node name="TextureUpload5" parent="Container/HBoxContainer/VoxelSettings/Textures" instance=ExtResource("3_agu6b")]
layout_mode = 2
side = 32

[node name="TextureUpload6" parent="Container/HBoxContainer/VoxelSettings/Textures" instance=ExtResource("3_agu6b")]
layout_mode = 2
side = 64

[connection signal="pressed" from="Container/HBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/PanelContainer/Add" to="." method="_on_add_pressed"]
[connection signal="typeSelected" from="Container/HBoxContainer/CenterContainer/VBoxContainer/VoxelTypeList" to="." method="_on_voxel_type_list_type_selected"]
